--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
+    <h2>Expense Tracker</h2>
+
+    <div class="container">
+      <h4>Your Balance</h4>
+    </div>
     <!-- JS -->
     <script src="script.js" defer></script>
   </body>
