--- a/index.html
+++ b/index.html
@@ -12,7 +12,44 @@
 
     <div class="container">
       <h4>Your Balance</h4>
+
+      <h1 id="balance">$0.00</h1>
+
+      <div class="inc-exp-container">
+        <div>
+          <h4>Income</h4>
+          <p id="money-plus" class="money plus">$0.00</p>
+        </div>
+        <div>
+          <h4>Expense</h4>
+          <p id="money-minus" class="money minus">$0.00</p>
+        </div>
+      </div>
+
+      <h3>History</h3>
+      <ul class="list" id="list">
+        <li class="minus">
+          Cash <span>$400</span><button class="delete-btn">x</button>
+        </li>
+      </ul>
+
+      <h3>Add new transaction</h3>
+      <form id="form">
+        <div class="form-control">
+          <label for="text">Text</label>
+          <input type="text" id="text" placeholder="Enter Text..." />
+        </div>
+        <div class="form-control">
+          <label for="amount">
+            Amount <br />
+            (negative - expense, positive - income)</label
+          >
+          <input type="number" id="amount" placeholder="Enter amount...." />
+        </div>
+        <button class="btn">Add transaction</button>
+      </form>
     </div>
+
     <!-- JS -->
     <script src="script.js" defer></script>
   </body>
