Added JavaScript functionality

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <div class="form-control">
           <label for="amount">
             Amount <br />
-            (negative - expense, positive - income)</label
+            (negative -expense, positive +income)</label
           >
           <input type="number" id="amount" placeholder="Enter amount...." />
         </div>
