--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
 
       <h3>History</h3>
       <ul class="list" id="list">
-        <li class="minus">
+        <!-- <li class="minus">
           Cash <span>$400</span><button class="delete-btn">x</button>
-        </li>
+        </li> -->
       </ul>
 
       <h3>Add new transaction</h3>
